--- a/app/views/app_proxy/index.html.slim
+++ b/app/views/app_proxy/index.html.slim
@@ -95,8 +95,9 @@
 
     .filter-container.hidden-on-small-screen
       .filter-heading-container
-        .filter-heading FILTER
-        .js-main-filter-icon.js-show-main-filter
+        - if ProductSetting.last.true_filter_on
+          .filter-heading FILTER
+          .js-main-filter-icon.js-show-main-filter
 
       .dropdown
         button.dropbtn
@@ -111,56 +112,57 @@
 
 
     .clearfix.main-container
-      .box-1
-        .filter-data-options-container.js-main-container.hidden-on-small-screen
-          - if params[:brand].present?
-            - params[:brand].each do |brand|
-              - newbrand = params[:brand].dup
-              - newbrand.delete(brand)
-              = link_to proxy_prod_path(size: params[:size], product_type: params[:product_type], price: params[:price], brand: newbrand) do
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = brand
-                  .remove-filter
+      - if ProductSetting.last.true_filter_on
+        .box-1
+          .filter-data-options-container.js-main-container.hidden-on-small-screen
+            - if params[:brand].present?
+              - params[:brand].each do |brand|
+                - newbrand = params[:brand].dup
+                - newbrand.delete(brand)
+                = link_to proxy_prod_path(size: params[:size], product_type: params[:product_type], price: params[:price], brand: newbrand) do
+                  .black-box-container
+                    .black-box-parent style='position: relative'
+                      .black-box style='position: relative; top: 0; left: 0'
+                      .small-black-box style='position: absolute; top: 0; left: 0'
+                    .sub-heading = brand
+                    .remove-filter
 
-          - if params[:size].present?
-            - params[:size].each do |size|
-              - newSize = params[:size].dup
-              - newSize.delete(size)
-              = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type], price: params[:price], size: newSize) do
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = "Size #{size}"
-                  .remove-filter
+            - if params[:size].present?
+              - params[:size].each do |size|
+                - newSize = params[:size].dup
+                - newSize.delete(size)
+                = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type], price: params[:price], size: newSize) do
+                  .black-box-container
+                    .black-box-parent style='position: relative'
+                      .black-box style='position: relative; top: 0; left: 0'
+                      .small-black-box style='position: absolute; top: 0; left: 0'
+                    .sub-heading = "Size #{size}"
+                    .remove-filter
 
-            - if params[:price].present?
-              = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type], size: params[:size]) do
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = params[:price]
-                  .remove-filter
+              - if params[:price].present?
+                = link_to proxy_prod_path(brand: params[:brand], product_type: params[:product_type], size: params[:size]) do
+                  .black-box-container
+                    .black-box-parent style='position: relative'
+                      .black-box style='position: relative; top: 0; left: 0'
+                      .small-black-box style='position: absolute; top: 0; left: 0'
+                    .sub-heading = params[:price]
+                    .remove-filter
 
-          - if params[:product_type].present?
-            - params[:product_type].each do |pt|
-              - newpt = params[:product_type].dup
-              - newpt.delete(pt)
-              = link_to proxy_prod_path(brand: params[:brand], size: params[:size], price: params[:price], product_type: newpt) do
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = pt
-                  .remove-filter
+            - if params[:product_type].present?
+              - params[:product_type].each do |pt|
+                - newpt = params[:product_type].dup
+                - newpt.delete(pt)
+                = link_to proxy_prod_path(brand: params[:brand], size: params[:size], price: params[:price], product_type: newpt) do
+                  .black-box-container
+                    .black-box-parent style='position: relative'
+                      .black-box style='position: relative; top: 0; left: 0'
+                      .small-black-box style='position: absolute; top: 0; left: 0'
+                    .sub-heading = pt
+                    .remove-filter
 
-          - ProductSetting.last.filter_array.each do |filter|
-            = render partial: filter, locals: {desktop: true}
-      .box-2
+            - ProductSetting.last.filter_array.each do |filter|
+              = render partial: filter, locals: {desktop: true}
+      .box-2 style="#{ProductSetting.last.true_filter_on ? '' : 'width: 100% !important'}"
         .product-container
           .js-all-products
             = render partial: 'home/products', locals: {showFirst: true}
