--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -10,13 +10,18 @@
           .model-close &times;
           h3 = product.vendor
           div style="display: flex"
-            h3 = "£ #{product.price} GPB"
+            h3 = "£ #{product.display_price} GPB"
             - if product.compare_at_price != 0.0
-              h3 = "£ #{product.compare_at_price}"
+              h3 = "£ #{product.compare_at_display_price}"
           h3 = product.title
           select style="border-radius: 5px"
             - product.sizes.split(',').each do |size|
               option = size
+
+        = link_to 'Test', 'javascript:void(0)', class: 'button js-cart-btn'
+
+
+
 
 
     / .the-modal
@@ -33,13 +38,14 @@
 
 
   .blur-div
-    .img-container
-      .product-image style="background-image: url('#{product.first_image_url}')" value='#{product.id}'
-      .product-image-two style="display: none; background-image: url('#{product.second_image_url}')"
-    .vendor-field = product.vendor
-    .title-container
-      .title-field = product.title
-    .price-container
-      .price-field = "£ #{product.price} GPB"
-      - if product.compare_at_price != 0.0
-        .compare-at-price = "£ #{product.compare_at_price}"
+    = link_to "/products/#{product.slug_url}" do
+      .img-container
+        .product-image style="background-image: url('#{product.first_image_url}')" value='#{product.id}'
+        .product-image-two style="display: none; background-image: url('#{product.second_image_url}')"
+      .vendor-field = product.vendor
+      .title-container
+        .title-field = product.title
+      .price-container
+        .price-field = "£ #{product.price} GPB"
+        - if product.compare_at_price != 0.0
+          .compare-at-price = "£ #{product.compare_at_price}"
