fixed a tag links in search

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -22,10 +22,12 @@
   margin: 10px 0
   font-weight: bold
   font-size: 14px
+  color: black
 
 .title-field
   margin: 0 0 8px
   font-size: 14px
+  color: black
 
 .img-container
   display: flex
