--- a/app/views/app_proxy/_type.html.slim
+++ b/app/views/app_proxy/_type.html.slim
@@ -6,8 +6,8 @@
     .filter-type-collection.js-type-container
       - @product_type.each do |pt|
         - prodtype = [pt] << params[:product_type]
-        = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price]) do
-          - if params[:product_type] == pt
+        = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price], query: params[:query]) do
+          - if params[:product_type] && params[:product_type].include?(pt)
             .black-box-container
               .black-box-parent style='position: relative'
                 .black-box style='position: relative; top: 0; left: 0'
@@ -27,8 +27,8 @@
     .filter-type-collection.js-type-container
       - @product_type.each do |pt|
           - prodtype = [pt] << params[:product_type]
-          = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price]) do
-          - if params[:product_type] == pt
+          = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price], query: params[:query]) do
+          - if params[:product_type] && params[:product_type].include?(pt)
             .black-box-container
               .black-box-parent style='position: relative'
                 .black-box style='position: relative; top: 0; left: 0'
