fix for modal scroll issue and re style of modal desktop and mobile

--- a/app/assets/stylesheets/search_results_index.sass
+++ b/app/assets/stylesheets/search_results_index.sass
@@ -1,11 +1,13 @@
 .quick-view-button
   background-color: black
-  width: 80%
-  height: 40px
+  width: 25%
+  height: 25px
   color: white
   position: absolute
-  top: 105px
-  border-radius: 5px
+  top: 0
+  line-height: 25px
+  right: 0
+  font-weight: bold
   display: flex
   align-items: center
   cursor: pointer
@@ -14,11 +16,12 @@
 .the-modal
   display: none
   background-color: #ffffff
-  width: 100%
+  width: 75%
   height: 522px
   position: fixed
   z-index: 9999999
   left: 0
+  margin-left: 12.5%
   top: 0
   overflow: auto
   padding: 1rem
@@ -58,11 +61,10 @@
   background-position: center
   height: 100%
   width: 50%
-  background-size: cover
+  background-size: contain
+  background-repeat: no-repeat
 
 .the-modal-sub-two
-  border: 1px solid #CCC
-  border-radius: 5px
   padding: 1rem
 
 .fade-blur
@@ -71,5 +73,3 @@
 .row-style
   height: 100%
   padding: 1rem
-  border: 1px solid #CCC
-  border-radius: 5px
