--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -90,11 +90,17 @@ body
     margin-right: 0.5rem
   .row-style
     height: 60% !important
+  .quick-view-button
+    width: 50%  !important
+  .the-modal-sub
+    width: 100% !important
   .the-modal
     // background-color: red !important
-    height: 100vh !important
+    height: 100% !important
+    width: 100% !important
+    margin-left: 0 !important
   .the-modal-sub-two
-    margin-top: 2rem  !important
+    // margin-top: 2rem  !important
   .box-2
     width: 100%
   .app-container
